<resources>
    <string name="app_name" translatable="false">Hanyu 2</string>
    <string name="english">English</string>
    <string name="myanmar">Myanmar</string>
    <string name="zawgyi">Myanmar(Zawgyi)</string>
    <string name="themes" translatable="false">Themes</string>
    <string name="languages">App Languages</string>
    <string name="dark_mode" translatable="false">Dark Mode</string>
    <string name="on_off" translatable="false">Off</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_2">Lesson 2</string>
    <string name="lesson_3">Lesson 3</string>
    <string name="lesson_4">Lesson 4</string>
    <string name="lesson_5">Lesson 5</string>
    <string name="lesson_6">Lesson 6</string>
    <string name="lesson_7">Lesson 7</string>
    <string name="lesson_8">Lesson 8</string>
    <string name="lesson_9">Lesson 9</string>
    <string name="lesson_10">Lesson 10</string>
    <string name="lesson_11">Lesson 11</string>
    <string name="lesson_12">Lesson 12</string>
    <string name="lesson_13">Lesson 13</string>
    <string name="lesson_14">Lesson 14</string>
    <string name="lesson_15">Lesson 15</string>
    <string name="learn">Learn</string>
    <string name="d148">watermelon</string>
    <string name="d149">big; large; great</string>
    <string name="d150">apple</string>
    <string name="d151">small; little; minor</string>
    <string name="d152">many; much; more</string>
    <string name="d153">few; little; less</string>
    <string name="d154">male; boy; man</string>
    <string name="d155">female; girl; woman</string>
    <string name="d156">hair</string>
    <string name="d157">long</string>
    <string name="d158">short</string>
    <string name="d159">fruit</string>
    <string name="d160">pear</string>
    <string name="d161">today</string>
    <string name="d162">weather</string>
    <string name="d163">very; quite</string>
    <string name="d164">flower</string>
    <string name="d165">pretty; beautiful; good-looking</string>
    <string name="d166">wind; breeze</string>
    <string name="d167">glad; happy; cheerful</string>
    <string name="d168">foot</string>
    <string name="d169">new</string>
    <string name="d170">old</string>
    <string name="d171">blue</string>
    <string name="d172">cloud</string>
    <string name="d173">white</string>
    <string name="d174">so; true; real; truly; really</string>
    <string name="d175">high; tall</string>
    <string name="d176">[used at the end of sentence to express enthusiasm, impatience, warning, order etc.]</string>
    <string name="d177">measure word for mountains, buildings, and similar immovable objects</string>
    <string name="d178">mountain; hill</string>
    <string name="d179">good-looking; interesting</string>
    <string name="d180">tasty; delicious</string>
    <string name="d181">amusing; fun; interesting</string>
    <string name="d182">measure word for songs and poems</string>
    <string name="d183">song</string>
    <string name="d184">pleasant to hear</string>
    <string name="d185">climb; clamber; scramble; crawl; creep</string>
    <string name="d186">air; atmosphere</string>
    <string name="d187">tree</string>
    <string name="d188">dog</string>
    <string name="d189">very; extremely; highly</string>
    <string name="d190">lovable; likable; adorable; lovely</string>
    <string name="d191">person; people</string>
    <string name="d192">busy; fully occupied</string>
    <string name="d193">tired; fatigued; weary</string>
    <string name="d194">clever; bright; intelligent</string>
    <string name="d195">measure word for certain animals, birds, boats, certain containers, and one of a pair</string>
    <string name="d196">cat</string>
    <string name="d197">bird</string>
    <string name="d198">like; love</string>
    <string name="d199">it</string>
    <string name="d200">lively; bustling</string>
    <string name="d201">grass</string>
    <string name="d203">friend</string>
    <string name="d204">lake</string>
    <string name="d205">colour</string>
    <string name="d206">bridge</string>
    <string name="d207">pair; a pair of; measure word for a pair of things</string>
    <string name="d208">chopsticks</string>
    <string name="d209">cup; glass</string>
    <string name="d210">toothbrush</string>
    <string name="d211">which; what</string>
    <string name="d212">bowl</string>
    <string name="d213">plate; dish</string>
    <string name="d214">[fusion of 了 and 啊]</string>
    <string name="d215">use</string>
    <string name="d216">spoon; scoop; ladle</string>
    <string name="d217">clothing; clothes</string>
    <string name="d218">red</string>
    <string name="d219">leather shoes</string>
    <string name="d220">black</string>
    <string name="d221">trousers; pants</string>
    <string name="d222">measure for long, or narrow, or thin objects</string>
    <string name="d223">skirt</string>
    <string name="d224">yellow</string>
    <string name="d225">colour</string>
    <string name="d226">hat; cap</string>
    <string name="d227">measure word for clothing, furniture, luggage and other matters in general</string>
    <string name="d228">speak; talk; say</string>
    <string name="d229">inside; inner</string>
    <string name="d230">measure word for pieces of things, gold, silver, money, etc.</string>
    <string name="d231">blackboard</string>
    <string name="d232">office</string>
    <string name="d233">measure word for telephone, films, books, machines, vehicles, etc.</string>
    <string name="d234">telephone; phone; phone call</string>
    <string name="d235">refrigerator; fridge</string>
    <string name="d236">beverage; soft drink</string>
    <string name="d237">box; case</string>
    <string name="d238">biscuit; cracker; cookie</string>
    <string name="d239">rubber; eraser</string>
    <string name="d240">in front; ahead; at the head</string>
    <string name="d241">road; street</string>
    <string name="d242">opposite side; right in front; face to face</string>
    <string name="d243">bank</string>
    <string name="d244">back side</string>
    <string name="d245">supermarket</string>
    <string name="d246">post office</string>
    <string name="d247">place</string>
    <string name="d248">playground</string>
    <string name="d249">entrance; doorway</string>
    <string name="d250">station; stop</string>
    <string name="d251">grade; year</string>
    <string name="d252">class</string>
    <string name="d253">wall</string>
    <string name="d254">map</string>
    <string name="d255">clean; neat and tidy</string>
    <string name="d256">China</string>
    <string name="d257">Li Xiao Long(Name)</string>
    <string name="d258">often; usually</string>
    <string name="d259">praise</string>
    <string name="d260">drink</string>
    <string name="d261">tea</string>
    <string name="d262">wine; alcoholic drink; liquor</string>
    <string name="d263">sit</string>
    <string name="d264">subway; metro; underground train</string>
    <string name="d265">there; that place</string>
    <string name="d266">look</string>
    <string name="d267">cartoon</string>
    <string name="d268">newspaper</string>
    <string name="d269">Chinese language; Han language</string>
    <string name="d270">also; too</string>
    <string name="d271">learn</string>
    <string name="d272">steamed bun</string>
    <string name="d273">pencil</string>
    <string name="d274">banana</string>
    <string name="d275">orange</string>
    <string name="d276">tennis; tennis ball</string>
    <string name="d277">hobby</string>
    <string name="d278">same; alike</string>
    <string name="d279">animated film</string>
    <string name="d280">weekend</string>
    <string name="d281">Chinese language</string>
    <string name="d282">all; both</string>
    <string name="d283">measure word(meaning some; a few)</string>
    <string name="d284">write</string>
    <string name="d285">tour; tourism</string>
    <string name="d286">teach</string>
    <string name="d287">egg</string>
    <string name="d288">television</string>
    <string name="d289">age; year</string>
    <string name="d290">this year</string>
    <string name="d291">Chinese character</string>
    <string name="d292">together</string>
    <string name="d293">go to school; attend school</string>
    <string name="d294">afternoon</string>
    <string name="d295">tomorrow</string>
    <string name="d296">bookstore</string>
    <string name="d297">so; too; very; extremely; excessively</string>
    <string name="d298">expensive</string>
    <string name="d299">measure word for questions, orders, etc.</string>
    <string name="d300">question; problem</string>
    <string name="d301">hard</string>
    <string name="d302">neighbour</string>
    <string name="d303">learn; study</string>
    <string name="d304">to; right; correct</string>
    <string name="d305">some</string>
    <string name="d306">run</string>
    <string name="d307">do exercise</string>
    <string name="d308">body</string>
    <string name="d309">animal</string>
    <string name="d310">monkey</string>
    <string name="d311">see; meet</string>
    <string name="sample_sentences">Sample Sentences</string>
    <string name="listen">Listen</string>
    <string name="l1s1">Watermelon is big, apple is small.</string>
    <string name="l1s2">Basketball is big, table tennis ball is small.</string>
    <string name="l1s3">There are many students, there are few teachers.</string>
    <string name="l1s4">There are many male classmates, there are few female classmates.</string>
    <string name="l1s5">You have many apples, I have few apples.</string>
    <string name="l1s6">Your room is big, my room is small.</string>
    <string name="l1s7">Your hair is long, my hair is short.</string>
    <string name="l1heading">Watermelon Is Big, Apple Is Small</string>
    <string name="l1passage">At night we eat fruits, more apples and less pears. My brother eats pears, and my sister and I eat apples. My apple is big, my sister\'s apple is small.</string>
    <string name="l5s1">Xiaoqiang: Where did you go in the morning?</string>
    <string name="l5s2">Xiaohua: I went to the park.</string>
    <string name="l5s3">Xiaoqiang: Is that park big?</string>
    <string name="l5s4">Xiaohua: The park is very big and beautiful.</string>
    <string name="l5s5">Xiaoqiang: What\'s there?</string>
    <string name="l5s6">Xiaohua: There are trees and flowers, there is a big lake, and there is a white bridge on the lake.</string>
    <string name="l5s7">Xiaoqiang: Are there many people?</string>
    <string name="l5s8">Xiaohua: There are many, the park is very lively.</string>
    <string name="l5heading">This Park Is So Lively</string>
    <string name="l5passage">The weather is very nice today,\nthe sky is blue, the wind is light,\nthe grass is green and the trees are tall. \nPuppy jumping, birds chirping, \nThere are so many little friends, \nThis park is really lively!</string>
    <string name="l15s1">Xiaohua: Do you often go to the zoo?</string>
    <string name="l15s2">Xiaohong: I often go there, I often go with my parents.</string>
    <string name="l15s3">Xiaohua: What animal do you like?</string>
    <string name="l15s4">Xiaohong: I like monkeys.</string>
    <string name="l15s5">Xiaohua: I also like monkeys. Monkeys are cute and also smart.</string>
    <string name="l15s6">Xiaohong: Do you often go to the zoo too?</string>
    <string name="l15s7">Xiaohua: I don\'t go there often. My parents are too busy.</string>
    <string name="l15s8">Xiaohong: Then, let\'s go together tomorrow?</string>
    <string name="l15s9">Xiaohua: Okay, see you tomorrow!</string>
    <string name="l15s10">Xiaohong: See you tomorrow!</string>
    <string name="l15heading">Class Is Over</string>
    <string name="l15passage">Class is over, class is over, it is so lively on the playground! Some run, some jump, it is good to do exercise every day!</string>
</resources>