<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white_and_black"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".reading.Reading15Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sample_sentences"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/general_background"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 你常去动物园吗？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l15s1"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小红： 我常去， 我常和爸爸妈妈一起去。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l15s2"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 你喜欢什么动物？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l15s3"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小红： 我喜欢猴子。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l15s4"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 我也喜欢猴子， 猴子很可爱， 也很聪明。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l15s5"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小红： 你也常去动物园吗？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l15s6"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 我不常去， 我爸爸妈妈太忙了。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l15s7"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小红： 那明天我们一起去吧？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l15s8"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 好啊， 明天见！"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l15s9"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小红： 明天见！"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l15s10"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="下课啦"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/listen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/yellow_and_blue"
                android:text="@string/listen"
                android:textColor="@color/on_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/general_background"
                android:padding="15dp"
                android:text="下课啦， 下课啦， 操场上， 真热闹！ 有的跑， 有的跳， 天天锻炼身体好！"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pinyin_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/pinyin_passage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/l15heading"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/general_background"
                android:padding="15dp"
                android:text="@string/l15passage"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>