<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white_and_black"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".reading.Reading14Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sample_sentences"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/general_background"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小强： 早上你去哪儿了？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s1"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 我去公园了。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s2"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小强: 那个公园大吗？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s3"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 公园很大， 很漂亮。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s4"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小强： 那儿有什么？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s5"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 有树， 有花， 有一个很大的湖， 湖上有一座白色的桥。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s6"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小强： 人多吗？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s7"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 非常多， 公园很热闹。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s8"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="这个公园真热闹"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/listen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/yellow_and_blue"
                android:text="@string/listen"
                android:textColor="@color/on_primary" />

            <TextView
                android:paddingRight="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/general_background"
                android:padding="15dp"
                android:text="今天天气非常好，\n天很蓝， 风很小， \n草很绿， 树很高。\n小狗跳， 小鸟叫， \n小朋友啊， 真不少， \n这个公园真热闹！"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pinyin_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/pinyin_passage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/l5heading"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/general_background"
                android:padding="15dp"
                android:gravity="center"
                android:text="@string/l5passage"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>